# kv

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  client.go  generate.sh  go.mod  go.sum  kvstore.rs  main.go
.claude/agents/: implementation-planner.md  rust-distributed-systems-expert.md  test-runner.md
.github/workflows/: ci.yml  test.yml
benchmark/: README.md  benchmark.go  config.go  go.mod  go.sum  grpc_client.go  raw_client.go  thrift_client.go
benchmark-rust/: Cargo.toml  README.md  build.rs
benchmark-rust/src/: main.rs
benchmark-rust/src/clients/: mod.rs  raw.rs  thrift.rs
benchmark-rust/tests/: thrift_benchmark_smoke.rs
benchmark_results/: raw-and-rpc-hot.html
configs/db/: cold_block_cache.toml  default.toml  warm_large_cache.toml
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/src/: kvstore_service.cpp  kvstore_service.h  main.cpp
docs/: conflict-detection-design.md  consensus-mock-transport-impl.md  garbage-collection-design.md  memory-comparable-encoding.md  multi-node-architecture.md  paxos-implementation-plan.md  paxos-replicated-kv-design.md  per-row-versioning-design.md  rust_thrift_transaction_design.md  thrift-generation-process.md  thrift-transactional-kv-review.md  transactional-redesign-plan.md
docs/diag/: diagnostic-api.md
docs/impl/: phase0-refactoring-plan.md  phase1-implementation-plan.md
docs/refactoring/: 001-rocksdb-storage-module-split.md  002-consensus-plugin-decoupling.md
docs/rsml/: cc-consensus-rsml-integration-plan.md  codex-consensus-rsml-integration-plan.md
gen-nodejs/: TransactionalKV.js
go/: benchmark.go  client.go  go.mod  go.sum  main.go  ping_client.go  server.go
go/proto/: kvstore.pb.go  kvstore_grpc.pb.go
nodejs/: .gitignore  README.md  nodes-config.json  package-lock.json  package.json  server.js
nodejs/__tests__/: README.md  api.test.js  diagnostic.test.js  error-handling.test.js  integration.test.js  logs.test.js  (+7 more)
proto/: kvstore.proto
rust/: .gitignore  CLAUDE.md  Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/client/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
rust/client/include/: kvstore_client.h
rust/client/src/: client.rs  config.rs  error.rs  ffi.rs  future.rs  kvstore.rs  lib.rs  transaction.rs
rust/client/tests/: README.md  abort_test.rs  binary_key_test.rs  cpp_ffi_test.cpp  ffi_test.c  integration_test.rs  unified_ffi_test.cpp
rust/client/tests/cpp_tests/: main.cpp  test_basic_operations.cpp  test_common.hpp  test_concurrency.cpp  test_configuration.cpp  test_range_operations.cpp  test_transactions.cpp
rust/crates/benchmark/: Cargo.toml  build.rs
rust/crates/benchmark/src/: config.rs  main.rs
rust/crates/benchmark/src/clients/: grpc.rs  mod.rs  raw.rs  thrift.rs
rust/crates/benchmark/tests/: thrift_benchmark_smoke.rs
rust/crates/consensus-api/: Cargo.toml
rust/crates/consensus-api/src/: config.rs  error.rs  lib.rs  traits.rs
rust/crates/consensus-mock/: Cargo.toml  build.rs
rust/crates/consensus-mock/src/: consensus_client.rs  consensus_server.rs  consensus_service.rs  generated.rs  in_memory_transport.rs  lib.rs  mock_consensus_client.rs  mock_consensus_server.rs  mock_node.rs  thrift_transport.rs  transport.rs  types.rs
rust/crates/consensus-mock/tests/: counter_test.rs  full_consensus_integration_tests.rs  thrift_transport_integration_tests.rs
rust/crates/consensus-rsml/: CLAUDE.md  Cargo.toml
rust/crates/consensus-rsml/src/: config.rs  engine.rs  error.rs  execution.rs  factory.rs  kv_executor_adapter.rs  lib.rs  test_utils.rs
rust/crates/consensus-rsml/tests/: config_tests.rs  integration_tests.rs
rust/crates/kv-storage-api/: Cargo.toml
rust/crates/kv-storage-api/src/: lib.rs  traits.rs  types.rs
rust/crates/kv-storage-mockdb/: Cargo.toml
rust/crates/kv-storage-mockdb/src/: lib.rs
rust/crates/kv-storage-rocksdb/: Cargo.toml
rust/crates/kv-storage-rocksdb/src/: config.rs  engine.rs  factory.rs  lib.rs
rust/scripts/: build_and_run_ffi_tests.sh
rust/src/: db.rs  db_config.toml  lib.rs  main.rs  service.rs  thrift_main.rs
rust/src/client/: client.rs  config.rs  error.rs  ffi.rs  future.rs  kvstore_client.h  mod.rs  transaction.rs
rust/src/lib/: config.rs  consensus_factory.rs  consensus_network_thrift.rs  consensus_plugin.rs  consensus_plugin_mock.rs  consensus_thrift.rs  consensus_transport.rs  database_factory.rs  db.rs  db_trait.rs  kv_operations.rs  kv_state_machine.rs  mce.rs  mod.rs  operations.rs  proto.rs  read_operations.rs  service.rs  service_core.rs  thrift_adapter.rs  thrift_handler.rs  write_operations.rs
rust/src/lib/cluster/: errors.rs  manager.rs  mod.rs  node_info.rs
rust/src/lib/db/: core.rs  fault_injection.rs  operations.rs  range.rs  transactions.rs  types.rs  utils.rs  versioning.rs
rust/src/lib/replication/: errors.rs  executor.rs  mod.rs  routing_manager.rs
rust/src/servers/: grpc_server.rs  shard_server.rs  thrift_server.rs
rust/tests/: client_integration_tests.rs  consensus_plugin_wiring.rs  consensus_replication_tests.rs  consensus_tests.rs  diagnostic_integration_tests.rs  diagnostic_tests.rs  integration_tests.rs  kvstore_client.h  mce_integration_tests.rs  multi_node_cluster_tests.rs  shard_server_rsml_inproc_tests.rs  shard_server_rsml_tests.rs  unified_ffi_test.cpp
rust/tests/client/: abort_test.rs  binary_key_test.rs  integration_test.rs  mod.rs  versionstamped_test.rs
rust/tests/common/: README.md  cluster_test_utils.rs  mod.rs  test_cluster.rs  test_config.rs
rust/tests/cpp_tests/: README.md  main.cpp  test_async_callbacks.cpp  test_basic_operations.cpp  test_binary_data.cpp  test_common.hpp  test_concurrency.cpp  test_configuration.cpp  test_error_handling.cpp  test_range_operations.cpp  test_transactions.cpp  test_versionstamped_operations.cpp
rust/tests/diagnostic/: diagnostic_tests.rs  diagnostic_utils.rs  mod.rs
scripts/: BENCHMARKS.md  benchmark_raw.sh  benchmark_suite.sh  cleanup_cluster.sh  generate_benchmark_report.py  install.sh  run_cold_raw.sh  run_rsml_tests.sh  run_test.sh  start_cluster.sh
thrift/: kvstore.thrift
(+28 files in other folders)
